Fixed product name not aligned with cross on IOS

--- a/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
+++ b/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
@@ -143,6 +143,7 @@
             @include mobile {
                 white-space: normal;
                 max-width: calc(100% - 24px);
+                line-height: var(--paragraph-line-height-mobile);
             }
         }
     }
